<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question5Activity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="What planet is closest to the sun?"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RadioButton
            android:id="@+id/question5_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selection_background"
            android:text="@string/question5_answer1"
            android:onClick="checkAnswer5"
            />
        <RadioButton
            android:id="@+id/question5_answer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selection_background"
            android:text="@string/question5_answer2"
            android:onClick="checkAnswer5"
            />
        <RadioButton
            android:id="@+id/question5_answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selection_background"
            android:text="@string/question5_answer3"
            android:onClick="checkAnswer5"
            />
        <RadioButton
            android:id="@+id/correct_answer5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selection_background"
            android:text="@string/correct_answer_question5"
            android:onClick="checkAnswer5"
            />

    </RadioGroup>

    <Button
        android:id="@+id/Confirm5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="Confirm"
        android:onClick="moveToQuestion6"
        />

</LinearLayout>