<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question3Activity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="What state is Mount Rushmore located in?"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RadioButton
            android:id="@+id/question3_answer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selection_background"
            android:text="@string/question3_answer1"
            android:onClick="checkAnswer3"
            />
        <RadioButton
            android:id="@+id/correct_answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selection_background"
            android:text="@string/correct_answer_question3"
            android:onClick="checkAnswer3"
            />
        <RadioButton
            android:id="@+id/question3_answer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selection_background"
            android:text="@string/question3_answer3"
            android:onClick="checkAnswer3"
            />
        <RadioButton
            android:id="@+id/question3_answer4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selection_background"
            android:text="@string/question3_answer4"
            android:onClick="checkAnswer3"
            />

    </RadioGroup>

    <Button
        android:id="@+id/Confirm3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="Confirm"
        android:onClick="moveToQuestion4"
        />


</LinearLayout>